package org.yinqin.mqs.common.manager;

import org.yinqin.mqs.common.service.MessageConsumer;

import java.util.ArrayList;

/**
 * 消费者管理器
 *
 * @author YinQin
 * @version 1.0.6
 * @createDate 2023年10月13日
 * @see java.util.LinkedHashMap
 * @since 1.0.0
 */
public class ConsumerManager extends ArrayList<MessageConsumer> {

}
